Bug 501052 - Plasmashell freezes at sshfs password prompt on command line
Summary: Plasmashell freezes at sshfs password prompt on command line
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-performance (other bugs)
Version First Reported In: 6.3.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 502454 (view as bug list)
Depends on:
Blocks: 504984
  Show dependency treegraph
 
Reported: 2025-03-04 11:56 UTC by grundik
Modified: 2025-06-21 12:55 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grundik 2025-03-04 11:56:36 UTC
When I mount a filesystem using sshfs, plasma totally freezes until actual connection is made, i.e. until I enter connection password or cancel connection by ctrl-c.

STEPS TO REPRODUCE
1. try to mount filesystem by sshfs, but do not enter ssh password;
2. observe plasmashell is frozen: you cannot restore applications from system tray, you cannot switch desktops, nothing;
3. stop connection attempt by ctrl-c;
4. observe plasmashell is working again like nothing happened.

OBSERVED RESULT

Plasmashell is frozen while password is being asked.

EXPECTED RESULT

Plasmashell should not freeze.

SOFTWARE/OS VERSIONS

Operating System: Debian GNU/Linux 12
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13-amd64 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION

This behavior started in 6.3, before that everything were fine. Only notification "filesystem is not responding" were shown, if password was not entered timely.
Comment 1 grundik 2025-04-23 22:11:03 UTC
Probably related: plasma is quite unresponsive when disks are on heavy load, like its almost impossible to use system tray. Looks like something synchronously polling mounts.
Comment 2 postix 2025-05-18 12:52:29 UTC
*** Bug 502454 has been marked as a duplicate of this bug. ***
Comment 3 postix 2025-05-18 12:55:27 UTC
Can confirm on 6.3.6. Unfortunately I have to use
```
sshfs user@host:/ mymount
```
which let Plasmashell freeze if the host is not responding (fast enough), as I can't mount the remote directory due to bug #504148.
Comment 4 Kai Uwe Broulik 2025-05-18 13:07:23 UTC
Confirmed. KFilePlacesModel (presumably from Notifications) reloads its list upon a new device appearing, querying mountpoints to find KDE Connect (which is also sshfs) and then blocking on a statvfs on that defunct sshfs mount.
Comment 5 Bug Janitor Service 2025-05-18 15:31:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1897
Comment 6 Bug Janitor Service 2025-06-01 07:29:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1906
Comment 7 Kai Uwe Broulik 2025-06-03 23:55:54 UTC
Git commit a00d12417064be64cdda93eb8bf73fffc3e5fb41 by Kai Uwe Broulik.
Committed on 03/06/2025 at 15:19.
Pushed by broulik into branch 'master'.

KFilePlacesItem: Try harder not to check for KDE Connect

KMountPoint might block in statvfs on a broken sshfs mount.

We know that KDE Connect mounts into XDG_RUNTIME_DIR, so any
other mount can't be it. Furthermore, if the place has been
hidden before we don't need to do any of this.

M  +23   -12   src/filewidgets/kfileplacesitem.cpp

https://invent.kde.org/frameworks/kio/-/commit/a00d12417064be64cdda93eb8bf73fffc3e5fb41
Comment 8 grundik 2025-06-17 13:34:50 UTC
Im sorry for maybe dumb question, but... Why this situation is even possible? How could it be, if single operation in a plugin causes blocking the whole plasma? Shouldnt it be done in separate thread in the first place?
Comment 9 Germano Massullo (Thetra) 2025-06-21 09:17:32 UTC
I cannot reproduce anylonger the bug on Plasma 6.4.0
Comment 10 postix 2025-06-21 12:03:34 UTC
Looks like Plasmashell indeed no longer freezes, just Dolphin still doesn't open until the connection is established  or aborted.