KFilePlacesItem: Use network share URL to find KDE Connect

KMountPoint might block in statvfs on a broken sshfs mount.
Instead, ask Solid for the URL and filter it out that way.

BUG: 501052